--- a/interview-tool-be/InterviewTool/InterviewTool.csproj
+++ b/interview-tool-be/InterviewTool/InterviewTool.csproj
@@ -5,14 +5,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Services\Interfaces\" />
-    <Folder Include="Infrastructure\Persistence\Configurations\" />
+    <Folder Include="Application\DTOs\" />
+    <Folder Include="Application\QueryHandlers\" />
+    <Folder Include="Application\Queries\" />
   </ItemGroup>
 
 </Project>
